--- a/src/app/component/Products/products/products.component.html
+++ b/src/app/component/Products/products/products.component.html
@@ -1,1 +1,272 @@
-<p>products works!</p>
+<div class="hero_area">
+    <!-- header section strats -->
+    <header class="header_section">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
+                <a class="navbar-brand" [routerLink]="['']">
+                    <img src="mayoor_nobg.png" alt="" />
+                    <span>
+                        Mayoor
+                    </span>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item home-button">
+                            <a class="nav-link active" aria-current="page" [routerLink]="['']">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Product
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" [routerLink]="['/products/1kSeries']">1K Series</a></li>
+                                <li><a class="dropdown-item" [routerLink]="['/products/2kSeries']">2K Series</a></li>
+                                <li><a class="dropdown-item" [routerLink]="['/products/A2kSeries']">A2k Series</a></li>
+                                <li><a class="dropdown-item" [routerLink]="['/products/clearcostSeries']">Clear Cost
+                                        Series</a></li>
+                                <li><a class="dropdown-item" [routerLink]="['/products/auxSeries']">Auxillary Series</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item color-chart-button">
+                            <a class="nav-link" [routerLink]="['/colorchart']">Color Chart</a>
+                        </li>
+                        <li class="nav-item contact-us-button">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+
+
+
+                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto mr-2">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="service.html">Services</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact us</a>
+              </li>
+            </ul>
+            <div class="user_option">
+              <div class="login_btn-container">
+                <a href="">
+                  Login
+                </a>
+              </div>
+              <form class="form-inline my-2 my-lg-0">
+                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+              </form>
+            </div>
+          </div> 
+          <div class="call_btn">
+            <a href="">
+              Call: +01234567890
+            </a>
+          </div>-->
+            </nav>
+        </div>
+    </header>
+</div>
+
+<section id="pricing" class="ud-pricing" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="ud-section-title mx-auto text-center">
+            
+            <h2 class="page-name">Our Products</h2>
+            
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-10">
+        </div>
+      </div>
+      <div class="row g-0 align-items-center justify-content-center">
+        
+        <div class="col-lg-4 col-md-6 col-sm-10">
+          <div
+            class="ud-single-pricing active wow fadeInUp"
+            data-wow-delay=".1s"
+          >
+          <h4 class="product-name">
+            {{ seriesName }}
+          </h4>
+          <img [src]="productImage" style="width: 100%;" class="product-image">
+            <span class="ud-popular-tag">POPULAR</span>
+            <div class="ud-pricing-header">
+              <h3>STARTING FROM</h3>
+              <h4>{{productPrice}}</h4>
+            </div>
+            <div class="ud-pricing-body">
+              <ul>
+                <li>5 User</li>
+                <li>All UI components</li>
+                <li>Lifetime access</li>
+                <li>Free updates</li>
+                <li>Use on 1 (one) project</li>
+                <li>4 Months support</li>
+              </ul>
+            </div>
+            <div class="ud-pricing-footer">
+              <button (click)="toggleSubProducts()" class="ud-main-btn ud-white-btn">
+                Sub-Products
+              </button>
+            </div>
+          </div>
+        </div>
+        <div *ngIf="showSubProducts" class="row mt-4">
+            <div *ngFor="let subProduct of subProducts" class="col-lg-4 col-md-6 col-sm-10">
+              <div class="ud-single-pricing wow fadeInUp" data-wow-delay=".1s">
+                <img [src]="subProduct.image" style="width: 100%;" alt="{{ subProduct.name }}">
+                <div class="ud-pricing-header">
+                  <h3>{{ subProduct.name }}</h3>
+                  <h4>{{ subProduct.price }}</h4>
+                </div>
+                <div class="ud-pricing-body">
+                  <p>Details about {{ subProduct.name }}.</p>
+                </div>
+                <div class="ud-pricing-footer">
+                  <button class="ud-main-btn ud-white-btn">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+        </div>
+        
+      </div>
+    </div>
+  </section>
+
+<section class="info_section layout_padding-top layout_padding2-bottom" style="padding-top: 75px; padding-bottom: 50px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-3">
+                    <div class="info_links pl-lg-5">
+                        <h4>
+                            Menu
+                        </h4>
+                        <ul>
+                            <li class="active">
+                                <a href="index.html">
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <a href="about.html">
+                                    About
+                                </a>
+                            </li>
+                            <li>
+                                <a class="" href="portfolio.html">Portfolio </a>
+                            </li>
+                            <li>
+                                <a class="" href="service.html">Services</a>
+                            </li>
+                            <li>
+                                <a href="contact.html">
+                                    Contact Us
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="info_contact">
+                        <h4>
+                            Location
+                        </h4>
+                        <div>
+                            <img src="/assets/images/location.png" alt="" />
+                            <p>
+                                104 loram ipusm
+                            </p>
+                        </div>
+                        <div>
+                            <img src="/assets/images/telephone.png" alt="" />
+                            <p>
+                                ( +01 1234567890 )
+                            </p>
+                        </div>
+                        <div>
+                            <img src="/assets/images/envelope.png" alt="" />
+                            <p>
+                                demogmail.com
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="info_social">
+                        <h4>
+                            Social Link
+                        </h4>
+                        <div class="social_container">
+                            <div>
+                                <a href="">
+                                    <img src="/assets/images/facebook-logo.png" alt="" />
+                                </a>
+                            </div>
+                            <div>
+                                <a href="">
+                                    <img src="/assets/images/twitter-logo.png" alt="" />
+                                </a>
+                            </div>
+                            <div>
+                                <a href="">
+                                    <img src="/assets/images/instagram.png" alt="" />
+                                </a>
+                            </div>
+                            <div>
+                                <a href="">
+                                    <img src="/assets/images/linkedin-sign.png" alt="" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="info_form">
+                        <h4>
+                            Newsletter
+                        </h4>
+                        <form action="#">
+                            <input type="text" placeholder="Enter Your Email" />
+                            <button type="submit">
+                                Subscribe
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- end info_section -->
+
+    <!-- footer section -->
+    <footer class="container-fluid footer_section">
+        <p>
+            &copy; 2019 All Rights Reserved By
+            <a href="https://html.design/">Free Html Templates</a>
+        </p>
+    </footer>
+    <!-- footer section -->
