--- a/src/app/component/navbar/navbar/navbar.component.css
+++ b/src/app/component/navbar/navbar/navbar.component.css
@@ -67,7 +67,8 @@
 /*header section*/
 .hero_area{
   height: 100vh;
-  background-image:url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);
+  /* background-image:url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png); */
+  background-image: url(/8722417.jpg)
 }
 
 .sub_page .hero_area {
@@ -101,7 +102,8 @@
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
   padding: 10px 30px;
-  color: #0878a0;
+  /* color: #0878a0; */
+  color: white;
   text-align: center;
 }
 .home-button:hover{
@@ -188,7 +190,8 @@ a:focus {
 
 .navbar-brand,
 .navbar-brand:hover {
-  color: #0878a0;
+  /* color: #0878a0; */
+  color: white;
   font-size: 22px;
   font-weight: 800;
   text-transform: uppercase;
