--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -86,7 +86,7 @@
                 <div class="row">
                   <div class="col-md-3 col-lg-2 offset-md-2">
                     <div class="detail-box">
-                      <h1>
+                      <h1 style="color: white;">
                         test Design
                       </h1>
                       <p>
@@ -205,6 +205,7 @@
     </section>
  
     
+    <!-- <section class="portfolio_section layout_padding" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);"> -->
     <section class="portfolio_section layout_padding" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);">
       <div class="container">
         <div class="custom_heading-container">
@@ -266,7 +267,8 @@
     </div>
   </section>
 
-    <section class="client_section layout_padding-bottom" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);">
+    <!-- <section class="client_section layout_padding-bottom" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);"> -->
+    <section class="client_section layout_padding-bottom" style="background-image: url(/8722417.jpg);">
       <div class="container">
         <div class="custom_heading-container">
           <h2>
