--- a/src/app/component/navbar/navbar/navbar.component.css
+++ b/src/app/component/navbar/navbar/navbar.component.css
@@ -68,7 +68,7 @@
 .hero_area{
   height: 100vh;
   /* background-image:url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png); */
-  background-image: url(/8722417.jpg)
+  background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743327420/8722417_fbz54m.jpg)
 }
 
 .sub_page .hero_area {
