homepage youtube video made responsive

--- a/src/app/component/ColorChart/colorchart/colorchart.component.html
+++ b/src/app/component/ColorChart/colorchart/colorchart.component.html
@@ -1,3 +1,4 @@
+<body style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743345421/8810733_dhr22u.jpg);">
 <div class="hero_area">
   <!-- header section strats -->
   <header class="header_section">
@@ -44,7 +45,7 @@
     </div>
   </header>
 </div>
-<section style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png); padding-bottom: 35px;">
+<section style="background-image: url(); padding-bottom: 35px;">
   <div>
     <h3 style="margin-left: 450px; color: #0878a0;">
       Color Chart
@@ -167,6 +168,7 @@
       </div>
   </div>
 </section>
+</body>
 
 <!-- end info_section -->
 
