--- a/src/app/component/Products/products/products.component.css
+++ b/src/app/component/Products/products/products.component.css
@@ -1,6 +1,6 @@
 .hero_area{
     /* height: 100vh; */
-    background-image:url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);
+    /* background-image:url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png); */
   }
   
   .sub_page .hero_area {
