--- a/src/app/component/ColorChart/colorchart/colorchart.component.css
+++ b/src/app/component/ColorChart/colorchart/colorchart.component.css
@@ -1,6 +1,6 @@
 .hero_area{
     /* height: 100vh; */
-    background-image:url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);
+    /* background-image:url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743345421/8810733_dhr22u.jpg); */
   }
   
   .sub_page .hero_area {
