--- a/src/app/component/Products/products/products.component.html
+++ b/src/app/component/Products/products/products.component.html
@@ -1,3 +1,5 @@
+
+<body style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743345421/8810733_dhr22u.jpg);">
 <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -51,7 +53,7 @@
     </header>
 </div>
 
-<section id="pricing" class="ud-pricing" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);">
+<section id="pricing" class="ud-pricing" style="background-image: url();">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -226,7 +228,7 @@
         </div>
     </section>
 
-    
+</body>
     <footer class="container-fluid footer_section">
         <p>
             &copy; 2019 All Rights Reserved By
