--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -1,3 +1,6 @@
+<body style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743345421/8810733_dhr22u.jpg);">
+
+
 <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -158,18 +161,18 @@
                 </div>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <!-- <button class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            </button>
+            <button class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
               <span class="sr-only">Next</span>
-            </a>
+            </button> -->
           </div>
         </div>
       </section>
     </div>
 
-    <section class="about_section layout_padding" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182255/skill-bg_eclteq.jpg);">
+    <section class="about_section layout_padding" style="background-image: url();">
       <div class="container">
         <div class="row">
           <div class="col-md-7">
@@ -206,7 +209,7 @@
  
     
     <!-- <section class="portfolio_section layout_padding" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);"> -->
-    <section class="portfolio_section layout_padding" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);">
+    <section class="portfolio_section layout_padding" style="background-image: url();">
       <div class="container">
         <div class="custom_heading-container">
           <h2>
@@ -268,7 +271,7 @@
   </section>
 
     <!-- <section class="client_section layout_padding-bottom" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);"> -->
-    <section class="client_section layout_padding-bottom" style="background-image: url(/8722417.jpg);">
+    <section class="client_section layout_padding-bottom" style="background-image: url();">
       <div class="container">
         <div class="custom_heading-container">
           <h2>
@@ -585,7 +588,7 @@
         </div>
       </div>
     </section>
-  
+  </body>
     <!-- end info_section -->
   
     <!-- footer section -->
