--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<body style="background-image: url(/8810733.jpg);">
 <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -585,6 +586,8 @@
         </div>
       </div>
     </section>
+
+</body>
     <!-- end info_section -->
   
     <!-- footer section -->
