fixing some issues pt 4

--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<body style="background-image: url(/8810733.jpg);">
+<section style="background-image: url(/8810733.jpg);">
 <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -587,7 +587,7 @@
       </div>
     </section>
 
-</body>
+</section>
     <!-- end info_section -->
   
     <!-- footer section -->
