--- a/src/app/component/navbar/navbar/navbar.component.css
+++ b/src/app/component/navbar/navbar/navbar.component.css
@@ -1,7 +1,7 @@
  body {
   font-family: 'Poppins', sans-serif;
   color: #101010;
-  background-color: #830c0c;
+  /* background-color: #830c0c; */
   
 }
 
