--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
             <a class="navbar-brand" [routerLink]="['']">
-              <img src="mayoor_nobg.png" alt="" />
+              <img src="mayoor_nobg.png" alt="" style="width: 55px;" />
               <span>
                 Mayoor 
               </span>
