made the website mobile responsive

--- a/src/app/component/ColorChart/colorchart/colorchart.component.html
+++ b/src/app/component/ColorChart/colorchart/colorchart.component.html
@@ -10,8 +10,8 @@
             Mayoor
           </span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -45,13 +45,14 @@
     </div>
   </header>
 </div>
-<section style="background-image: url(); padding-bottom: 35px;">
-  <div>
-    <h3 style="margin-left: 450px; color: #0878a0;">
+<section style="align-items: center;
+  justify-content: center;  padding-bottom: 35px;">
+  <div style="justify-content: center;">
+    <h3 class="colorcharth3" style=" color: #0878a0;">
       Color Chart
       
     </h3>
-    <p style="margin-left: 450px; color: #0878a0;">
+    <p style=" color: #0878a0;">
       Click the image to zoom.
     </p>
   </div>
@@ -63,6 +64,19 @@
     
   </div>
 </section>
+
+<!-- <section class="color-chart-section">
+  <div class="text-container">
+    <h3>Color Chart</h3>
+    <p>Click the image to zoom.</p>
+  </div>
+  <div class="image-container">
+    <a href="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743249961/Mayoor_chart-1-min_vqmc6g.jpg">
+      <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743249961/Mayoor_chart-1-min_vqmc6g.jpg"
+      alt="Zoomable Image" class="zoom-image">
+    </a>
+  </div>
+</section> -->
 
 <section class="info_section layout_padding-top layout_padding2-bottom" style="padding-top: 75px; padding-bottom: 50px;">
   <div class="container">
