--- a/src/app/component/ColorChart/colorchart/colorchart.component.css
+++ b/src/app/component/ColorChart/colorchart/colorchart.component.css
@@ -645,8 +645,21 @@
 .zoom-image {
     width: 100%;
     height: 100%;
-    /* object-fit: cover; */
     transition: transform 0.3s ease-in-out;
+}
+.zoom-image:hover {
+  transform: scale(1.05);
+}
+
+@media (max-width: 991px){
+  .image-container{
+    width: auto;
+    height: auto;
+    margin-left: auto;
+  }
+  .colorcharth3{
+    margin-left: auto;
+  }
 }
 .color-chart-button:hover,.contact-us-button:hover{
   border: #c89666 2px solid;
