--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -1,3 +1,6 @@
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <section style="background-image: url(/8810733.jpg);">
 <div class="hero_area">
       <!-- header section strats -->
@@ -10,7 +13,8 @@
                 Mayoor 
               </span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -58,22 +62,7 @@
                   <a class="nav-link" href="contact.html">Contact us</a>
                 </li>
               </ul>
-              <div class="user_option">
-                <div class="login_btn-container">
-                  <a href="">
-                    Login
-                  </a>
-                </div>
-                <form class="form-inline my-2 my-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
-            </div> 
-            <div class="call_btn">
-              <a href="">
-                Call: +01234567890
-              </a>
-            </div>-->
+            </div>  -->
           </nav>
         </div>
       </header>
