prototype for patthu

--- a/src/app/component/ColorChart/colorchart/colorchart.component.html
+++ b/src/app/component/ColorChart/colorchart/colorchart.component.html
@@ -1,4 +1,4 @@
-<body style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743345421/8810733_dhr22u.jpg);">
+<body style="background-image: url(/yusuf-background-flipped.png);">
 <div class="hero_area">
   <!-- header section strats -->
   <header class="header_section">
