--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<section style="background-image: url(/8810733.jpg);">
+<section style="background-image: url(/yusuf-background-flipped.png);">
 <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
