--- a/src/app/component/ColorChart/colorchart/colorchart.component.html
+++ b/src/app/component/ColorChart/colorchart/colorchart.component.html
@@ -6,8 +6,8 @@
       <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
         <a class="navbar-brand" [routerLink]="['']">
           <img src="mayoor_nobg.png" alt="" />
-          <span>
-            Mayoor
+          <span style="color: white;">
+            MK 
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,7 +37,7 @@
               <a class="nav-link" [routerLink]="['/colorchart']">Color Chart</a>
             </li>
             <li class="nav-item contact-us-button">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" [routerLink]="['/about-us']">About Us</a>
             </li>
           </ul>
         </div>
@@ -48,11 +48,11 @@
 <section style="align-items: center;
   justify-content: center;  padding-bottom: 35px;">
   <div style="justify-content: center;">
-    <h3 class="colorcharth3" style=" color: #0878a0;">
+    <h3 class="colorcharth3" style=" color: #ffffff;">
       Color Chart
       
     </h3>
-    <p style=" color: #0878a0;">
+    <p style=" color: #ffffff;">
       Click the image to zoom.
     </p>
   </div>
@@ -113,7 +113,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
               <div class="info_contact">
-                  <h4>
+                  <!-- <h4>
                       Location
                   </h4>
                   <div>
@@ -121,23 +121,23 @@
                       <p>
                           104 loram ipusm
                       </p>
-                  </div>
+                  </div> -->
                   <div>
                       <img src="/assets/images/telephone.png" alt="" />
                       <p>
-                          ( +01 1234567890 )
+                          ( +91 62032 32297 )
                       </p>
                   </div>
-                  <div>
+                  <!-- <div>
                       <img src="/assets/images/envelope.png" alt="" />
                       <p>
                           demogmail.com
                       </p>
-                  </div>
+                  </div> -->
               </div>
           </div>
 
-          <div class="col-md-6 col-lg-3">
+          <!-- <div class="col-md-6 col-lg-3">
               <div class="info_social">
                   <h4>
                       Social Link
@@ -165,7 +165,7 @@
                       </div>
                   </div>
               </div>
-          </div>
+          </div> -->
           <div class="col-md-6 col-lg-3">
               <div class="info_form">
                   <h4>
@@ -190,7 +190,7 @@
 <footer class="container-fluid footer_section">
   <p>
       &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      <a href="#">Mayoor Kolors</a>
   </p>
 </footer>
 <!-- footer section -->
