--- a/src/app/component/Products/products/products.component.css
+++ b/src/app/component/Products/products/products.component.css
@@ -34,7 +34,7 @@
   
   .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
     padding: 10px 30px;
-    color: #0878a0;
+    color: #ffffff;
     text-align: center;
   }
   .home-button:hover{
@@ -645,4 +645,29 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1), 0px 1px 5px rgba(0, 0, 0, 0.05);
   border: 2px solid #ddd;  /* Subtle border */
   transition: all 0.3s ease;
+  }
+
+  .dropdown-menu {
+    position: absolute;
+    /* top: 100%; */
+    /* left: 0; */
+    margin-left: 275px !important;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 10rem;
+    padding: 0.5rem 0;
+    margin: 0.125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    /* background-color: #fff; */
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0.25rem;
+    background: linear-gradient(10deg, white, transparent);
+    /* opacity: 0; */
+    /* transform: translateY(-10px); Start slightly above */
+    /* transition: opacity 0.3s ease, transform 0.3s ease; */
   }
