--- a/src/app/component/Products/products/products.component.html
+++ b/src/app/component/Products/products/products.component.html
@@ -7,8 +7,8 @@
             <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
                 <a class="navbar-brand" [routerLink]="['']">
                     <img src="mayoor_nobg.png" alt="" />
-                    <span>
-                        Mayoor
+                    <span style="color: white;">
+                        MK
                     </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,7 +39,7 @@
                             <a class="nav-link" [routerLink]="['/colorchart']">Color Chart</a>
                         </li>
                         <li class="nav-item contact-us-button">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" [routerLink]="['/about-us']">About Us</a>
                         </li>
                     </ul>
                 </div>
@@ -58,7 +58,7 @@
         <div class="col-lg-12">
           <div class="ud-section-title mx-auto text-center">
             
-            <h2 class="page-name">Our Products</h2>
+            <h2 class="page-name" style="color: white;">Our Products</h2>
             
           </div>
         </div>
@@ -78,17 +78,16 @@
           <img [src]="productImage" style="width: 100%;" class="product-image">
             <span class="ud-popular-tag">POPULAR</span>
             <div class="ud-pricing-header">
-              <h3>STARTING FROM</h3>
-              <h4>{{productPrice}}</h4>
+              <!-- <h4>{{productPrice}}</h4> -->
             </div>
             <div class="ud-pricing-body">
               <ul>
-                <li>5 User</li>
-                <li>All UI components</li>
-                <li>Lifetime access</li>
-                <li>Free updates</li>
-                <li>Use on 1 (one) project</li>
-                <li>4 Months support</li>
+                <li>{{productDescription1}}</li>
+                <li>{{productDescription2}}</li>
+                <li>{{productDescription3}}</li>
+                <li>{{productDescription4}}</li>
+                <li>{{productDescription5}}</li>
+                <li>{{productDescription6}}</li>
               </ul>
             </div>
             <div class="ud-pricing-footer">
@@ -107,7 +106,7 @@
                   <h4>{{ subProduct.price }}</h4>
                 </div>
                 <div class="ud-pricing-body">
-                  <p>Details about {{ subProduct.name }}.</p>
+                  <p>COMING SOON.</p>
                 </div>
                 <div class="ud-pricing-footer">
                   <button class="ud-main-btn ud-white-btn">
@@ -157,31 +156,17 @@
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="info_contact">
-                        <h4>
-                            Location
-                        </h4>
-                        <div>
-                            <img src="/assets/images/location.png" alt="" />
-                            <p>
-                                104 loram ipusm
-                            </p>
-                        </div>
                         <div>
                             <img src="/assets/images/telephone.png" alt="" />
                             <p>
-                                ( +01 1234567890 )
+                                ( +91 62032 32297 )
                             </p>
                         </div>
-                        <div>
-                            <img src="/assets/images/envelope.png" alt="" />
-                            <p>
-                                demogmail.com
-                            </p>
-                        </div>
+                        
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-3">
+                <!-- <div class="col-md-6 col-lg-3">
                     <div class="info_social">
                         <h4>
                             Social Link
@@ -209,8 +194,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
+                </div> -->
+                <!-- <div class="col-md-6 col-lg-3">
                     <div class="info_form">
                         <h4>
                             Newsletter
@@ -222,7 +207,7 @@
                             </button>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -231,7 +216,7 @@
     <footer class="container-fluid footer_section">
         <p>
             &copy; 2019 All Rights Reserved By
-            <a href="https://html.design/">Free Html Templates</a>
+            <a href="#">Mayoor Kolors</a>
         </p>
     </footer>
     <!-- footer section -->
