--- a/src/app/component/navbar/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <a class="navbar-brand" [routerLink]="['']">
               <img src="mayoor_nobg.png" alt="" style="width: 55px;" />
               <span>
-                Mayoor 
+                MK 
               </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -38,7 +38,7 @@
                   <a class="nav-link" [routerLink]="['/colorchart']">Color Chart</a>
                 </li>
                 <li class="nav-item contact-us-button">
-                  <a class="nav-link" href="#">Contact Us</a>
+                  <a class="nav-link" [routerLink]="['/about-us']">About Us</a>
                 </li>
               </ul>
             </div>
@@ -77,14 +77,13 @@
                   <div class="col-md-3 col-lg-2 offset-md-2">
                     <div class="detail-box">
                       <h1 style="color: white;">
-                        test Design
+                        Mayoor Kolors
                       </h1>
-                      <p>
-                        There are many variations of passages of Lorem Ipsum
-                        available, but the majority
+                      <p style="color: white;">
+                        Coloring Lives, One Coat at a Time.
                       </p>
                       <div>
-                        <a href="">
+                        <a [routerLink]="['/about-us']">
                           Read More
                         </a>
                       </div>
@@ -92,7 +91,7 @@
                   </div>
                   <div class="col-md-7 col-lg-8">
                     <div class="img-box">
-                      <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743180604/samples/hero_jeztm5.png" alt="" />
+                      <img src="hero-updated.png" alt="" />
                     </div>
                   </div>
                 </div>
@@ -102,11 +101,10 @@
                   <div class="col-md-3 col-lg-2 offset-md-2">
                     <div class="detail-box">
                       <h1>
-                        Make Design
+                        Mayoor Kolors
                       </h1>
-                      <p>
-                        There are many variations of passages of Lorem Ipsum
-                        available, but the majority
+                      <p style="color: white;">
+                        Coloring Lives, One Coat at a Time.
                       </p>
                       <div>
                         <a href="">
@@ -117,7 +115,7 @@
                   </div>
                   <div class="col-md-7 col-lg-8">
                     <div class="img-box">
-                      <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743180604/samples/hero_jeztm5.png" alt="" />
+                      <img src="hero-updated.png" alt="" />
                     </div>
                   </div>
                 </div>
@@ -127,11 +125,10 @@
                   <div class="col-md-3 col-lg-2 offset-md-2">
                     <div class="detail-box">
                       <h1>
-                        Make Design
+                        Mayoor Kolors
                       </h1>
-                      <p>
-                        There are many variations of passages of Lorem Ipsum
-                        available, but the majority
+                      <p style="color: white;">
+                        Coloring Lives, One Coat at a Time.
                       </p>
                       <div>
                         <a href="">
@@ -142,7 +139,7 @@
                   </div>
                   <div class="col-md-7 col-lg-8">
                     <div class="img-box">
-                      <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743180604/samples/hero_jeztm5.png" alt="" />
+                      <img src="hero-updated.png" alt="" />
                     </div>
                   </div>
                 </div>
@@ -159,47 +156,10 @@
       </section>
     </div>
 
-    <section class="about_section layout_padding" style="background-image: url();">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-7">
-            <div class="img-box">
-              <!-- <img src="/assets/images/about-img.png" alt="" /> -->
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/ly36kn0ug4k?si=L6LoA2jf80N5S7Su" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-          </div>
-          <div class="col-md-5">
-            <div class="detail-box">
-              <div class="custom_heading-container">
-                <h2>
-                  About Factory
-                </h2>
-              </div>
-  
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using 'Content
-                here , content here', making it
-              </p>
-              <div>
-                <a href="">
-                  About More
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
- 
-    
-    <!-- <section class="portfolio_section layout_padding" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);"> -->
     <section class="portfolio_section layout_padding" style="background-image: url();">
       <div class="container">
         <div class="custom_heading-container">
-          <h2>
+          <h2 style="color: white;">
             Our Products
           </h2>
         </div>
@@ -218,24 +178,24 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182254/paint-bucket_fx2shw.png" class="d-block w-100" alt="..." [routerLink] ="['/products/1kSeries']">
+                  <img src="paint-bucket1.jfif" class="d-block w-100" alt="..." [routerLink] ="['/products/1kSeries']">
                   <div class="carousel-caption black" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); font-weight: bold;">1K Series</div>
                 </div>
                 <div class="carousel-item">
-                  <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182253/p-4_mmovgz.png" class="d-block w-100" alt="..." [routerLink] ="['/products/2kSeries']">
+                  <img src="paint-bucket2.jfif" class="d-block w-100" alt="..." [routerLink] ="['/products/2kSeries']">
                   <div class="carousel-caption black" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); font-weight: bold;">2k Series</div>
                 </div>
                 <div class="carousel-item">
-                  <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182254/paint-bucket_fx2shw.png" class="d-block w-100" alt="..." [routerLink] ="['/products/A2kSeries']">
+                  <img src="paint-bucket3.jfif" class="d-block w-100" alt="..." [routerLink] ="['/products/A2kSeries']">
                   <div class="carousel-caption black" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); font-weight: bold;">A2K Series</div>
                 </div>
                 <div class="carousel-item">
-                  <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182254/paint-bucket_fx2shw.png" class="d-block w-100" alt="..." [routerLink] ="['/products/clearcostSeries']">
-                  <div class="carousel-caption black" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); font-weight: bold;">Clear Cost Series</div>
+                  <img src="paint-bucket1.jfif" class="d-block w-100" alt="..." [routerLink] ="['/products/clearcostSeries']">
+                  <div class="carousel-caption black" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); font-weight: bold;">Clear Coat Series</div>
                 </div>
                 <div class="carousel-item">
                   <div class="carousel-caption" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); font-weight: bold;">Auxillary Series</div>
-                  <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182254/paint-bucket_fx2shw.png" class="d-block w-100" alt="..." [routerLink] ="['/products/auxSeries']">
+                  <img src="paint-bucket2.jfif" class="d-block w-100" alt="..." [routerLink] ="['/products/auxSeries']">
                   
                 </div>
               </div>
@@ -257,11 +217,45 @@
     </div>
   </section>
 
+
+    <section class="about_section layout_padding" style="background-image: url();">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7">
+            <div class="img-box">
+              <!-- <img src="/assets/images/about-img.png" alt="" /> -->
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/4KUfstDbA5k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-md-5">
+            <div class="detail-box">
+              <div class="custom_heading-container">
+                <h2 style="color: white;">
+                  About Factory
+                </h2>
+              </div>
+  
+              <p style="color: white;">
+                At our state-of-the-art facility, innovative practices blend seamlessly with time-honored craftsmanship to create automotive paint solutions that meet the highest quality standards. Our experienced team employs advanced technology and rigorous quality controls throughout production, ensuring every product delivers exceptional durability and precision.
+We continuously push the boundaries of research and development while embracing sustainable practices and modern techniques. This commitment to excellence drives the performance and innovation behind every coat of paint, reflecting our passion for transforming vehicles into works of art.
+              </p>
+              <div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+ 
+    
+    <!-- <section class="portfolio_section layout_padding" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);"> -->
+    
+
     <!-- <section class="client_section layout_padding-bottom" style="background-image: url(https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182252/hero-bg_afujwe.png);"> -->
     <section class="client_section layout_padding-bottom" style="background-image: url();">
       <div class="container">
         <div class="custom_heading-container">
-          <h2>
+          <h2 style="color: white;">
             Testimonial
           </h2>
         </div>
@@ -275,11 +269,11 @@
                 <div class="client_box b-1">
                   <div class="client-id">
                     <div class="img-box">
-                      <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182251/client-1_oxdyvv.jpg" alt="" />
+                      <img src="client-1.jfif" alt="" />
                     </div>
                     <div class="name">
                       <h5>
-                        smirth jon
+                        Raghuvir Kashyap
                       </h5>
                       <p>
                         client
@@ -288,19 +282,9 @@
                   </div>
                   <div class="detail">
                     <p>
-                      It is a long established fact that a reader will be distracted
-                      by the readable content of a page when looking at its layout.
-                      The point of using Lorem Ipsum is that it has a more-or-less
-                      normal distribution of letters, as opposed to using 'Content
-                      here, content here', making it look like readable English. Many
-                      desktop publishing packages and web page editors now use Lorem
-                      Ipsum as their default model It is a long established fact that
-                      a reader will be distracted by the readable content of a page
-                      when looking at its layout. The point of using Lorem Ipsum is
-                      that it has a more-or-less normal distribution of letters, as
-                      opposed to using 'Content here, content here', making it look
-                      like readable English. Many desktop publishing packages and web
-                      page editors now use Lorem Ipsum as their default model
+                      As a professional with over 15 years in the automotive restoration business, I've worked with almost every paint brand and series on the market. When I was introduced to this line—specifically the 1K and 2K Series—I was blown away by the ease of use and the flawless results. The 1K Series is perfect for quick jobs and touch-ups. It lays down beautifully, has excellent coverage, and doesn’t require any additional components, making it a total time-saver in a busy shop environment.
+                      But the 2K Series is where things really shine. The curing time is rapid, and the final finish is stunningly glossy and durable—clients always comment on how 'factory-fresh' their cars look. And then we tried the Alloy 2K Series for a custom muscle car project, and it was a game-changer. The metallic flake and the depth it brought to the finish gave the vehicle an entirely new character. It wasn’t just a paint job; it was a transformation.
+                      To top it all off, we sealed everything with the Clearcoat Series. The depth, gloss, and UV protection it provided were just phenomenal. Even months later, the cars we’ve worked on still look like they just rolled out of the booth. If you're in the business and care about quality and results, this entire product line is hands down one of the best investments you can make.
                     </p>
                   </div>
                 </div>
@@ -311,7 +295,7 @@
                     </div>
                     <div class="name">
                       <h5>
-                        smirth den
+                        Gopal den
                       </h5>
                       <p>
                         client
@@ -320,19 +304,13 @@
                   </div>
                   <div class="detail">
                     <p>
-                      It is a long established fact that a reader will be distracted
-                      by the readable content of a page when looking at its layout.
-                      The point of using Lorem Ipsum is that it has a more-or-less
-                      normal distribution of letters, as opposed to using 'Content
-                      here, content here', making it look like readable English. Many
-                      desktop publishing packages and web page editors now use Lorem
-                      Ipsum as their default model It is a long established fact that
-                      a reader will be distracted by the readable content of a page
-                      when looking at its layout. The point of using Lorem Ipsum is
-                      that it has a more-or-less normal distribution of letters, as
-                      opposed to using 'Content here, content here', making it look
-                      like readable English. Many desktop publishing packages and web
-                      page editors now use Lorem Ipsum as their default model
+                      My design philosophy is all about bold colors, perfect finishes, and long-term durability—and I finally found a paint system that matches that vision. I started using the 1K Series for smaller custom work and quick-turnaround projects. It’s so user-friendly that even my interns can handle application with minimal supervision, yet the results are consistently professional-grade.
+
+When it comes to full-body custom jobs, the 2K Series has become our go-to. The finish it delivers is stunning—rich color, brilliant gloss, and a durability that truly stands up to Indian weather conditions, including monsoons and extreme sun. What’s most impressive is the consistency. Every coat lays flat, smooth, and cures perfectly each time.
+
+But nothing compares to the Alloy 2K Series for show cars and premium restorations. The metallic finish is breathtaking—rich, deep, and alive with sparkle under any light. My clients are always amazed at how the paint alone can elevate the design. And when we finish it off with the Clearcoat Series, the results are jaw-dropping. The gloss is like glass, the clarity is impeccable, and the protection means my work stays beautiful for years.
+
+I've recommended this paint system to countless colleagues, and the feedback has been overwhelmingly positive. It’s rare to find a brand that hits every mark—ease of use, visual impact, durability, and eco-awareness. This series is now an essential part of my studio.
                     </p>
                   </div>
                 </div>
@@ -519,30 +497,30 @@
           <div class="col-md-6 col-lg-3">
             <div class="info_contact">
               <h4>
-                Location
+                Contact Us
               </h4>
-              <div>
+              <!-- <div>
                 <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182250/location_hbqox5.png" alt="" />
                 <p>
                   104 loram ipusm
                 </p>
-              </div>
+              </div> -->
               <div>
                 <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182255/telephone_omx2bg.png" alt="" />
                 <p>
-                  ( +01 1234567890 )
+                  ( +91 62032 32297 )
                 </p>
               </div>
-              <div>
+              <!-- <div>
                 <img src="https://res.cloudinary.com/dzcdirj0l/image/upload/v1743182251/envelope_vjczq6.png" alt="" />
                 <p>
                   demogmail.com
                 </p>
-              </div>
+              </div> -->
             </div>
           </div>
   
-          <div class="col-md-6 col-lg-3">
+          <!-- <div class="col-md-6 col-lg-3">
             <div class="info_social">
               <h4>
                 Social Link
@@ -570,7 +548,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           
         </div>
       </div>
@@ -583,7 +561,7 @@
     <footer class="container-fluid footer_section">
       <p>
         &copy; 2019 All Rights Reserved By
-        <a href="#">Mayoor International</a>
+        <a href="#">Mayoor Kolors</a>
       </p>
     </footer>
     <!-- footer section -->
